@@ -1,3 +1,7 @@
+August 27, 2020 - Take A Seat, Young WW Server Edition
+----------------------------
+- Master difficulty unlocked and point tables changed for Token Events on WW
+
 August 9, 2020 - Edition Edition Edition Edition Edition Edition Edition Edition Edition Edition
 ----------------------------
 - 10x EXP campaign on JP, yikes. Time to add an EXP multiplier input. Long overdue, I guess.
